# joeymckenzie.tech

./: .dockerignore  .env  .env.ci  .env.example  .env.local  .eslintignore  .eslintrc.cjs  .eslintrc.json  .eslinttc.json  .gitignore  .markdownlint.json  .mcp.json  .npmrc  .nuxtignore  .phpstorm.meta.php  .pre-commit-config.yaml  .prettierignore  .prettierrc.cjs  .prettierrc.json  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  Justfile  LICENSE-MIT  Makefile.toml  README.md  Secrets.toml  Secrets.toml.example  TODO.md  WithNeonFly.sln  _ide_helper.php  action.yml  app.config.ts  app.vue  astro.config.mjs  astro.config.ts  biome.json  boost.json  build.rs  (+49 more)
.astro/: types.d.ts
.astrokj:q/: types.d.ts
.cargo/: config.toml
.claude/: settings.json
.config/: wt.toml
.contentlayer/: package.json
.githooks/: commit-msg  pre-commit  pre-push
.github/: dependabot.yml
.husky/: pre-commit  pre-push
.junie/: guidelines.md
.nuxt/: app.config.mjs  components.d.ts  imports.d.ts  mdc-imports.mjs  nuxt.d.ts  robots.mjs  tsconfig.json  tsconfig.server.json  vue-router-stub.d.ts
.serena/: project.yml
.sqlx/: query-165950bf51bfa10696c69e22e818f6b2030a652e8c891f85e32fc90cd0e36d0b.json  query-3eaca7f53b2c286abba81f4c05dd89dcb70dec85d33e68ad6c8889b989973451.json  query-50a1869a896602c5cd627edb8404176505a86dd464bae58de3d0631103dc4081.json  query-53e9df0fba1fd17a08ba3b2f8c698b3117ceb903586ba9cced973b58f67de146.json  query-58a4be61afd7b8718ffa590bc17988edb5a1da133b746e98830c8e68f759c413.json  query-59ef407bdac1340f77340e70c6fdc0d586cf4aa647284a8de22b294dd99ef8a1.json  query-5b627ac5e09b283f189a1803190416bf9f70457ca9cad57d00b56d5ab5a1719c.json  query-980d9665fc8ec65f9828c62273db17b7952d7b7f5124c4fb1b3a5650f6977eaa.json  query-9bf0b9e9b4bf1088ee6d9becbd7801797b16b31f6ba5644f63f05f44725efaa3.json  query-a65a7020b9d1c5709987783fb9f39a2a5433c8d33f9db0c86a1079c69a117dfc.json  query-b009f0f12ad3f0fa58a64e723ca19c5be78215d797b7734e42d7bbf971b5577d.json  query-b7a2cfbddd93071b1b40a8ec83c8e2247706a34b5282cf6d2e43e3965fa9e3ae.json  query-b8ed816ed9fedd483f74ffc58504e9f70dce1b4b67fb7168ff70a185365e0add.json  query-bd6b0efe72ae3b10374ca25298ffc110b621d27a0d66a172f00c1b47acd10885.json  query-fd8fd9372a222f208494a0aeeb97cd47f41db029db6ad102cdc861c5b214dc98.json
__tests__/: index.test.tsx
app/: app.vue
bootstrap/: app.php  providers.php
components/: AboutDescription.tsx  AboutHeader.tsx  AboutHero.tsx  AboutTimeline.tsx  ActiveLink.tsx  BlogCard.tsx  BlogCardFilteredDomainPills.tsx  BlogCardsContainer.tsx  BlogContainer.tsx  BlogContainerMeta.tsx  BlogHeader.tsx  BlogImage.tsx  BlogLayout.tsx  BlogNavigation.tsx  BlogPreviewContainer.tsx  BlogSearchInput.tsx  BlogsLoading.vue  CodeSnippetCard.tsx  CodeSnippets.tsx  ContactForm.tsx  ContactFormInput.tsx  Footer.tsx  Footer.vue  FooterWithLinks.tsx  FormattedDate.vue  FormattedViews.vue  GitHubProjectCard.tsx  GitHubProjects.tsx  Header.vue  HeaderButtons.tsx  Hero.tsx  HtmlTag.vue  InlineBold.vue  Intro.tsx  LayoutFooter.vue  LayoutHeader.tsx  LayoutNavbar.vue  Logo.tsx  MobileMenu.tsx  Modal.tsx  (+23 more)
config/: app.php  auth.php  blade-icons.php  bluesky.php  cache.php  database.php  development.toml  filesystems.php  inertia.php  livewire.php  mail.php  markdown.php  misc.php  orbit.php  production.toml  queue.php  services.php  session.php  site.php  spotify.php  sqlighter.php  torchlight.php
content/: content-driven-sites-with-svelte-and-contentlayer.md  net-core-dapper-and-crud-buzzword-bingo-part-4.md  net-core-dapper-and-crud-buzzword-bingo.md  post-1.md  post-2.md  post-3.md  rust-aws-lambda-and-office-quotes.md  rustful-state-machines.md  second-post.md  templates-with-rust-axum-htmx-askama.md
database/: client.ts  schema.ts
drizzle/: 0000_panoramic_magma.sql  0000_real_echo.sql  0001_material_dreaming_celestial.sql
examples/rust/with-aws-lambda/: .gitignore  Cargo.toml  README.md  justfile  quotes.json  terraform.tfstate
examples/rust/with-aws-lambda/src/: main.rs  quotes.rs
examples/rust/with-aws-lambda/terraform/: bucket.tf  gateway.tf  justfile  lambda.tf  main.tf  outputs.tf  terraform.tf
examples/rust/with-aws-lambda/tf/: .terraform.lock.hcl  justfile  lambda.tf  locals.tf  main.tf  outputs.tf  plan.tf  resource.tf  role.tf  s3.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
examples/rust/with-axum-htmx-askama/: Cargo.toml  package.json  pnpm-lock.yaml  tailwind.config.cjs
examples/rust/with-axum-htmx-askama/assets/: main.css
examples/rust/with-axum-htmx-askama/src/: main.rs
examples/rust/with-axum-htmx-askama/templates/: base.html  hello.html  todo-form.html
examples/rust/with-shuttle/: Cargo.toml  Secrets.toml.example
examples/rust/with-shuttle/src/: handlers.rs
functions/: handlers.rs  lib.rs  responses.rs  spotify.rs  state.rs
layouts/: BlogLayout.tsx  CodeSnippetLayout.tsx  MainLayout.tsx  default.vue
lib/: constants.ts  constants.tsx  index.ts  prisma.ts  types.ts  utilities.ts
migrations/: 20230524092526_add_views_table.sql  20240330235747_create_blogs_table.sql  20240331000250_create_keywords_table.sql  20240331000321_create_keyword_post_table.sql  20240331000404_create_notes_table.sql  20240422184319_create_posts_table.sql  20240422184618_create_keywords_table.sql  (+1 more)
pages/: 404.tsx  _app.tsx  (+8 more)
samples/rust/flying-with-rust-and-postgres/: Cargo.toml
samples/rust/flying-with-rust-and-postgres/src/: main.rs
samples/rust/serverless-databases/: Cargo.toml
samples/serverless-databases/: Cargo.toml
samples/serverless-databases/src/: with-neon.rs  with-planetscale.rs
(+2006 files in other folders)
