[package]
name = "rust-blog"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "content"
path = "bin/content.rs"

[dependencies]
axum = "0.7.5"
dotenvy = "0.15.7"
libsql = "0.3.2"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
