[package]
name = "rust-blog"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "content"
path = "bin/content.rs"

[dependencies]
axum = "0.7"
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
gray_matter = "0.2"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
sqlx = { version = "0.7", features = [ "postgres", "runtime-tokio", "tls-rustls" ] }
