[package]
name = "blog"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "content"
path = "bin/content.rs"

[dependencies]
# runtime
tokio = { version = "1", features = ["full"] }

# server crates
axum = "0.7"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }

# data cates
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "tls-rustls", "time"] }

# utility crates
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
gray_matter = "0.2"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
time = { version = "0.3", features = ["macros", "serde"] }
thiserror = "1"
serde_json = "1"
