[package]
name = "with-shuttle"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shuttle-runtime = "0.29.0"
shuttle-axum = "0.29.0"
shuttle-secrets = "0.19.0"
axum = "0.6.12"
tokio = "1.26.0"
reqwest = { version = "0.11.16", features = ["json"] }
serde = { version = "1.0.159", features = ["derive"] }
http = "0.2.9"
tracing = "0.1.37"
thiserror = "1.0.40"
