[package]
name = "flying-with-rust-and-postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.12", features = ["macros"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
sqlx = { version = "0.6", features = [
    "runtime-tokio-rustls",
    "migrate",
    "postgres",
    "uuid",
    "offline",
] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }

[profile.release]
debug = 1
